Facebook: Agregar enlace a página de Facebook y mejorar meta tags sociales

--- a/francesco/templates/francesco/index.html
+++ b/francesco/templates/francesco/index.html
@@ -13,7 +13,7 @@
     <meta name="robots" content="index, follow">
     
     <!-- Google Search Console Verification -->
-    <meta name="google-site-verification" content="KFT-iYXfNOlRxpYvkSRAPAkkCipI4jloSN1ld0VwElk" />>
+    <meta name="google-site-verification" content="KFT-iYXfNOlRxpYvkSRAPAkkCipI4jloSN1ld0VwElk" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -21,6 +21,8 @@
     <meta property="og:title" content="Domicilios Francesco - Servicio de Domicilios Rápidos en Sogamoso">
     <meta property="og:description" content="Servicio de domicilios tres veces veloz en Sogamoso. Pedidos por WhatsApp y teléfono.">
     <meta property="og:image" content="https://web-production-6ad82.up.railway.app{% static 'francesco/images/logo_francesco_1.jpg' %}">
+    <meta property="fb:app_id" content="your-facebook-app-id">
+    <meta property="article:author" content="https://www.facebook.com/share/1AGyZQRBZC/">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -790,10 +792,10 @@
                     <h3>Redes Sociales</h3>
                     <p>@DomiciliosFrancesco</p>
                     <div class="social-icons">
-                        <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/share/1AGyZQRBZC/" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="https://wa.me/573116305437" class="social-icon"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.me/573116305437" target="_blank" class="social-icon"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
