Horarios: Actualizar horario de atención de 8:00 AM a 6:00 PM, lunes a domingo

--- a/francesco/templates/francesco/index.html
+++ b/francesco/templates/francesco/index.html
@@ -50,7 +50,7 @@
         "latitude": "5.7089",
         "longitude": "-72.9345"
       },
-      "openingHours": "Mo-Su 08:00-22:00",
+      "openingHours": "Mo-Su 08:00-18:00",
       "servesCuisine": "Delivery Service",
       "priceRange": "$$",
       "contactPoint": {
@@ -712,7 +712,7 @@
                 <div class="coverage-item">
                     <i class="fas fa-clock" style="font-size: 3rem; color: #FFD700; margin-bottom: 1rem;"></i>
                     <h3>Horarios</h3>
-                    <p>Lunes a domingo<br>8:00 AM - 12:00 AM</p>
+                    <p>Lunes a domingo<br>8:00 AM - 6:00 PM</p>
                 </div>
             </div>
         </div>
