--- a/francesco/templates/francesco/index.html
+++ b/francesco/templates/francesco/index.html
@@ -50,7 +50,7 @@
         "latitude": "5.7089",
         "longitude": "-72.9345"
       },
-      "openingHours": "Mo-Su 08:00-12:00",
+      "openingHours": "Mo-Su 08:00-00:00",
       "servesCuisine": "Delivery Service",
       "priceRange": "$$",
       "contactPoint": {
@@ -712,7 +712,7 @@
                 <div class="coverage-item">
                     <i class="fas fa-clock" style="font-size: 3rem; color: #FFD700; margin-bottom: 1rem;"></i>
                     <h3>Horarios</h3>
-                    <p>Lunes a domingo<br>8:00 AM - 12:00 PM</p>
+                    <p>Lunes a domingos<br>8 de la mañana hasta las 12 de la noche</p>
                 </div>
             </div>
         </div>
